<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".CrawlerActivity">

    <LinearLayout
        android:id="@+id/view_post_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/unit_0.5x"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="@dimen/unit_2x"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_post_url"
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/tv_post_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit"
            android:textColor="?android:attr/textColorTertiary"
            android:singleLine="true"
            android:ellipsize="middle" />

        <TextView
            android:id="@+id/tv_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit_0.5x"
            android:visibility="gone"
            android:maxLines="3"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp"
            android:text="@string/log_err" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_video_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/unit_0.5x"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="@dimen/unit"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_video_url"
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary" />

        <ProgressBar
            android:id="@+id/pb_find_video"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit"
            android:indeterminate="true" />

        <LinearLayout
            android:id="@+id/view_video_url_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_video_quality_hd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginEnd="@dimen/unit_0.5x"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/video_quality_hd" />

            <TextView
                android:id="@+id/tv_video_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="middle"
                android:textColor="?android:attr/textColorTertiary" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/unit_1.5x"
        android:layout_marginEnd="@dimen/unit_1.5x"
        android:layout_marginTop="@dimen/unit_1.5x"
        android:layout_marginBottom="@dimen/unit"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/bt_play"
            android:text="@string/action_play"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/bt_download"
            android:text="@string/action_download"
            android:enabled="false"
            android:layout_marginStart="@dimen/unit_0.5x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>